gitlab-ci/ingress-gitlab-listener.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitlab-listener
spec:
  rules:
    - host: tekton.listener.devops.en.internal
      http:
        paths:
          - path: /
            backend:
              serviceName: el-gitlab-listener
              servicePort: 8080
