gitlab-ci/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitlab-listener
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: el-gitlab-listener
              servicePort: 8080
